<resources>
    <string name="mine_mineFragment4">确定要退出吗</string>
    <string name="mine_mine_activity_reset_password60">原密码</string>
    <string name="mine_mineFragment3">离董事分红仅差一步，赶快邀请好友。</string>
    <string name="mine_mine_activity_invite100">专属邀请码</string>
    <string name="mine_bindMobileOrEmailActivity1">邮箱验证码</string>
    <string name="mine_bindMobileOrEmailActivity2">手机验证码</string>
    <string name="mine_resetPasswordActivity2">两次密码输入不一致</string>
    <string name="mine_mine_activity_security120">登录密码</string>
    <string name="mine_resetPasswordActivity1">请输入新密码</string>
    <string name="mine_dividendBean1">第二十五周</string>
    <string name="mine_mineFragment2">欢迎来到SCEX</string>
    <string name="mine_mineFragment1">点击登录</string>
    <string name="mine_mine_activity_my_team20">我的团队</string>
    <string name="mine_mine_activity_reset_password20">修改登录密码</string>
    <string name="mine_verify6">邮箱验证</string>
    <string name="mine_verify5">邮箱地址</string>
    <string name="mine_verify4">谷歌认证</string>
    <string name="mine_verify3">谷歌身份验证器</string>
    <string name="mine_resetPayPasswordActivity1">请输入新资金密码</string>
    <string name="mine_verify2">短信验证</string>
    <string name="mine_mine_item_comission_top120">今日预估佣金:</string>
    <string name="mine_verify1">手机号码</string>
    <string name="mine_mine_activity_reset_pa_ypassword130">资金密码</string>
    <string name="mine_mine_item_comission_top80">冻结佣金:</string>
    <string name="mine_mine_activity_director120">累计分红</string>
    <string name="mine_mine_activity_bind_mobile_or_email140">获取验证码</string>
    <string name="mine_mine_fragment_mine130">订单管理</string>
    <string name="mine_mine_item_dividend20">第四周</string>
    <string name="mine_mine_activity_bind_googl_everify210">立即开启</string>
    <string name="mine_mine_fragment_mine210">版本号</string>
    <string name="mine_mine_activity_bind_googl_everify40">打开谷歌验证器，扫描下方二维码或手动输入下述秘钥添加验证令牌。 秘钥用户手机更换或遗失时找回谷歌验证器，绑定前请务必将下述秘 钥备份保存。</string>
    <string name="mine_mine_activity_security20">安全中心</string>
    <string name="mine_mine_activity_language100">繁体中文</string>
    <string name="mine_mine_activity_reset_password260">请输入确认密码</string>
    <string name="mine_mine_activity_reset_password100">请输入原密码</string>
    <string name="mine_mine_activity_bind_googl_everify170">谷歌验证码</string>
    <string name="mine_mine_activity_reset_password220">新密码确认</string>
    <string name="mine_mine_activity_commission140">佣金</string>
    <string name="mine_mine_activity_bind_mobile_or_email20">绑定手机</string>
    <string name="mine_mine_activity_invite190">专属推广海报</string>
    <string name="mine_mine_activity_my_team230">我的直推</string>
    <string name="mine_mine_activity_bind_mobile_or_email60">请输入您的手机号码</string>
    <string name="mine_mine_activity_share_img20">我要推广</string>
    <string name="mine_mine_activity_setting_password20">设置资金密码</string>
    <string name="mine_verifySettingActivity1">未绑定</string>
    <string name="mine_mine_activity_director180">分红明细</string>
    <string name="mine_mine_activity_reset_password130">新密码</string>
    <string name="mine_mine_activity_bind_googl_everify140">复制</string>
    <string name="mine_verifySettingActivity2">已绑定</string>
    <string name="mine_mine_activity_setting_password100">请输入资金密码</string>
    <string name="mine_mine_item_comission_top100">累计佣金:</string>
    <string name="mine_mine_activity_reset_password170">8-20位字符且字母数字组合</string>
    <string name="mine_mine_activity_my_team120">团队人数</string>
    <string name="mine_mine_activity_my_team160">今日新增</string>
    <string name="mine_securityActivity1">未设置</string>
    <string name="mine_mine_item_team20">孙悟空</string>
    <string name="mine_securityActivity2">已设置</string>
    <string name="mine_mine_activity_invite210">我的客户</string>
    <string name="mine_mine_activity_director20">董事分红</string>
    <string name="mine_mine_fragment_mine230">退出登录</string>
    <string name="mine_mine_activity_bind_mobile_or_email120">请输入验证码</string>
    <string name="mine_mine_activity_language20">选择语言</string>
    <string name="mine_mine_activity_bind_googl_everify20">绑定谷歌验证器</string>
    <string name="mine_mine_activity_security40">* 短信验证用于提币、转账、修改登录和资金密码；\n* 谷歌验证用于登录、提币、修改登录和资金密码；\n* 为了保证您的账户安全，以下两种验证方式至少开启一种；</string>
    <string name="mine_securityActivity5">为了保证您的账户安全，短信验证和谷歌验证方式至少开启一种</string>
    <string name="mine_mine_activity_language60">简体中文</string>
    <string name="mine_securityActivity3">已开启</string>
    <string name="mine_mine_activity_bind_googl_everify60">请妥善备份秘钥以防遗失</string>
    <string name="mine_mine_fragment_mine190">联系客服</string>
    <string name="mine_securityActivity4">未开启</string>
    <string name="mine_mine_activity_bind_googl_everify190">请输入6位验证码</string>
    <string name="mine_mine_activity_commission160">平仓时间</string>
    <string name="mine_mine_fragment_mine40">阿童木</string>
    <string name="mine_mine_activity_reset_pa_ypassword220">密码确认</string>
    <string name="mine_mine_activity_reset_pa_ypassword100">请输入原资金密码</string>
    <string name="mine_mine_fragment_mine80">普通会员</string>
    <string name="mine_mine_activity_commission20">佣金明细</string>
    <string name="mine_mine_activity_reset_pa_ypassword60">原资金密码</string>
    <string name="mine_mine_activity_reset_pa_ypassword260">请输入确认资金密码</string>
    <string name="mine_mine_activity_bind_mobile_or_email170">提交</string>
    <string name="mine_mine_activity_invite20">邀请好友</string>
    <string name="mine_mine_activity_reset_pa_ypassword20">修改资金密码</string>
    <string name="mine_save">保存相册</string>
    <string name="mine_mine_activity_invite201">规则</string>
    <string name="mine_change">修改</string>
    <string name="mine_bindMobileOrEmailActivity101">绑定邮箱</string>
    <string name="mine_bindMobileOrEmailActivity201">请输入您的邮箱地址</string>
    <string name="mine_mission_total">累计佣金折合(USDT)</string>
    <string name="mine_start_sms">请先开启短信验证</string>
    <string name="mine_mine_activity_skip">选择展示模式</string>
    <string name="skip_light">日间模式</string>
    <string name="mine_skip_night">夜间模式</string>
    <string name="mine_news_notice">资讯/公告</string>
    <string name="mine_asset_manager">资产管理</string>
    <string name="mine_shareimg_step1">第一步：图片保存到手机相册</string>
    <string name="mine_shareimg_step2">第二步：将图片分享到微信、QQ、微博、论坛等</string>
    <string name="mine_asset_account">账户资产</string>
    <string name="mine_asset_fragment_asset120">总资产折合(USDT)</string>
    <string name="mine_asset_zoom">划转</string>
    <string name="mine_contract1">目标合约</string>
    <string name="mine_contract2">周期合约</string>
    <string name="mine_contract3">杠杆合约</string>
    <string name="app_name">MyCenter</string>
    <string name="center_login_tips">点击登录</string>
    <string name="center_hy">欢迎来到CICOIN</string>
    <string name="mine_get_code">请点击获取验证码</string>
    <string name="mine_tvcode">获取验证码</string>
    <string name="mine_verifyFirstActivity1">初级认证</string>
    <string name="mine_activity_verify_home230">认证成功</string>
    <string name="mine_verifyResultActivity1">认证成功</string>
    <string name="mine_verifySecondActivity1">高级认证</string>
    <string name="mine_activity_verify_home570">通过高级认证，以获得更多功能</string>
    <string name="mine_verifyHomeActivity2">初级实名认证正在审核</string>
    <string name="mine_verifyFirstActivity23">初级认证已通过，无需重复认证</string>
    <string name="mine_verifyHomeActivity4">请先完成初级实名认证</string>
    <string name="mine_verifyHomeActivity5">高级实名认证审核中，请耐心等待</string>
    <string name="mine_verifyHomeActivity51">高级实名认证已通过，无需重复认证</string>
    <string name="mine_verifyFirstActivity11">认证失败，失败原因：</string>
    <string name="mine_verifyFirstActivity12">再次认证</string>
    <string name="mine_verifyHomeActivity7">审核中</string>
    <string name="mine_verifyHomeActivity6">未认证</string>
    <string name="mine_assetFragment3">已拒绝</string>
    <string name="mine_verify_user">身份认证</string>
    <string name="mine_name">姓名</string>
    <string name="mine_name_hint">请输入本人真实姓名</string>
    <string name="mine_pwd">身份证号</string>
    <string name="mine_pwd_tip">请输入本人身份证号</string>
    <string name="mine_invite_title">邀请返佣</string>
    <string name="mine_yqfy_ljkh">累计开户</string>
    <string name="mine_yqfy_jrsy">今日收益</string>
    <string name="mine_yqfy_ljsy">累计收益</string>
    <string name="mine_yjmx">佣金明细</string>
    <string name="mine_wdtg">我的推广</string>
    <string name="mine_wdkf">我的客户</string>
    <string name="mine_mine_activity_team310">名称</string>
    <string name="mine_mine_activity_teamleavl">账号</string>
    <string name="mine_mine_activity_team330">注册时间</string>
    <string name="mine_wdkf_title">我的客户</string>
    <string name="mine_helper_center">帮助中心</string>
    <string name="mine_about_us">关于我们</string>
    <string name="mine_wdyj_title">我的佣金</string>
    <string name="mine_mine_activity_yj">佣金</string>
    <string name="mine_mine_activity_my">我的推广</string>
    <string name="mine_copy">复制</string>
    <string name="mine_share_tips">长按保存二维码</string>
    <string name="mine_yjfk">意见反馈</string>
    <string name="mine_activity_feedback60">请留下你的手机号码或者邮箱</string>
    <string name="mine_lxfs">你的联系方式</string>
    <string name="mine_ms">描述：</string>
    <string name="mine_cicoin">请描述您的问题，问题提交后，CICOIN会通过电邮答复您，请及时关注的你的邮箱。</string>
    <string name="mine_tjfk">提交反馈</string>
    <string name="mine_feedbackActivity3">请输入您的联系方式</string>
    <string name="mine_feedbackActivity2">请输入反馈内容</string>
    <string name="mine_setting">设置</string>
    <string name="mine_logout">退出登录</string>
    <string name="mine_settingActivity41">V %s</string>
    <string name="mine_mine_activity_bind_googl_everify10">手机或邮箱验证码</string>
    <string name="mine_mine_activity_bind_googl_everify19">请输入手机或邮箱验证码</string>
    <string name="mine_advanced_certification">高级认证</string>
    <string name="mine_tip_setpwd">8-20位数字与字母组合密码</string>
    <string name="mine_primary_certification">初级认证</string>
    <string name="mine_decertification_success">认证成功</string>
    <string name="mine_decertificationing">认证中</string>
    <string name="mine_certificationing">身份认证中</string>
    <string name="mine_decertification_fail">认证失败</string>
    <string name="mine_no_decertification">待认证</string>
    <string name="mine_no_decertification_tip">通过高级认证，以获得更多功能</string>
    <string name="mine_primary_tip">为保障您的账户安全，需要进行身份验证\n身份一旦认证无法修改，请仔细填写您的真实信息</string>
    <string name="mine_decertification_name">姓名</string>
    <string name="mine_decertification_idnumber">身份证号</string>
    <string name="mine_decertification_name_hint">请输入您的姓名</string>
    <string name="mine_decertification_id_hint">请输入您的身份证号码</string>
    <string name="mine_advance_id">身份证</string>
    <string name="mine_aadvance_idtip">请正确上传您的证件图片</string>
    <string name="mine_mine_activity_verify_second19_j0">请上传身份证正面</string>
    <string name="mine_verifySecondActivity6_j">请上传手持身份证照片</string>
    <string name="mine_mine_activity_verify_second25_j0">请上传身份证背面</string>
    <string name="mine_mine_activity_verify_second21_j0">身份证正面确保无水印无污渍，身份信息清晰，非文字反向照片，请勿进行PS处理。</string>
    <string name="mine_mine_activity_verify_second27_j0">身份证反面确保无水印无污渍，身份信息清晰，非文字反向照片，请勿进行PS处理。</string>
    <string name="mine_mine_activity_verify_second33_j0">需要您本人单手手持您的身份证，另一只手持有一张有您手写的ID和当天日期的白纸，确保身份证和白纸在您胸前，不遮挡您的脸部，并且身份证和白纸上的信息清晰可见。</string>
    <string name="mine_certification_success">身份认证成功</string>
    <string name="mine_certification_success_tip">请遵守平台交易规则进行交易</string>
    <string name="mine_certification_fail">认证失败，请</string>
    <string name="mine_recertification">重新认证</string>
    <string name="mine_certification_fail_tip">失败原因：</string>
    <string name="mine_sign_in">签到</string>
    <string name="mine_no_sign_in">已签到</string>
    <string name="mine_confirm">确定</string>
    <string name="mine_sign_des">签到成功，恭喜您获得 +</string>
    <string name="mine_sign_des1">%s原力</string>
    <string name="mine_to_complete_task">确定</string>
    <string name="mine_account_asset">账户资产</string>
    <string name="mine_account_all_asset">总资产折合(USDT)</string>
    <string name="mine_security_level">安全级别：</string>
</resources>