<?xml version="1.0" encoding="utf-8" standalone="no"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_background"
    android:orientation="vertical">


    <com.sskj.common.view.ToolBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title_color="@color/common_white"
        app:background_color="@color/common_action_bar"
        app:title="@string/mine_mine_activity_reset_password20" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_action_bar"
        android:orientation="vertical"
        android:paddingLeft="@dimen/common_margin"
        android:paddingRight="@dimen/common_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/mine_mine_activity_reset_password60"
            android:textColor="@color/common_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/common_edt_line_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/ps_edt"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@null"
                android:drawablePadding="10dp"
                android:hint="@string/mine_mine_activity_reset_password100"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/common_text"
                android:textColorHint="@color/common_text"
                android:textSize="14sp" />


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/mine_mine_activity_reset_password130"
            android:textColor="@color/common_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/common_edt_line_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/new_ps_edt"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@null"
                android:drawablePadding="10dp"
                android:hint="@string/mine_mine_activity_reset_password170"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/common_text"
                android:textColorHint="@color/common_text"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/show_new_ps_img"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/common_icon_hide" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/mine_mine_activity_reset_password220"
            android:textColor="@color/common_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/common_edt_line_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/ps_repeat_edt"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@null"
                android:drawablePadding="10dp"
                android:hint="@string/mine_mine_activity_reset_password260"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/common_text"
                android:textColorHint="@color/common_text"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/show_repeat_ps_img"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/common_icon_hide" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/common_margin"
        android:layout_marginTop="50dp"
        android:layout_marginRight="@dimen/common_margin"
        android:background="@drawable/common_tip_50"
        android:text="@string/mine_mine_activity_bind_mobile_or_email170"
        android:textColor="@color/common_white" />
</LinearLayout>
